fix: reverted to getId from threadId to prevent version mismatch error